# shahrazad-app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Plan.md  ReadMe.md  build-server.sh  compose.dev.yaml  rust-nightly.Dockerfile  update-frontend.sh  update-types.sh
.devcontainer/: devcontainer.json
.github/workflows/: build-server.yml  deploy.yml
backend/: Cargo.toml
backend/src/: main.rs  state.rs
frontend/: .env.preview  .env.production  bun.lockb  components.json  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: favicon.xcf  globals.css  layout.tsx  manifest.ts  navbar.tsx  page.tsx
frontend/src/app/game/: code-input.tsx  create-game-form.tsx  create-game-loading.tsx  game-form.tsx  join-game-form.tsx  join-game-loading.tsx  layout.tsx  page.tsx
frontend/src/app/test/: page.tsx
frontend/src/contexts/: device.tsx  fullscreen.tsx  game.tsx  player.tsx  scrycards.tsx  search.tsx  selection.tsx
frontend/src/hooks/: useDevice.tsx  useScrycards.ts  useScrycardsList.ts  useWasmInitialized.ts
frontend/src/lib/: client.ts  compare.ts  createGame.ts  fetchGame.ts  importDeck.ts  random.ts
frontend/src/utils/: compare.ts
shared/: Cargo.toml  build.rs
shared/src/: export.rs  lib.rs  main.rs
shared/src/proto/: action.proto  card.proto  game.proto  message.proto  playmat.proto  ws.proto  zone.proto
shared/src/tests/: action.rs  card.rs  game.rs  game_internal.rs  mod.rs  proto.rs  reset_playmat.rs  utils.rs  ws.rs
shared/src/types/: action.rs  api.rs  branding.rs  card.rs  game.rs  message.rs  mod.rs  player.rs  playmat.rs  ws.rs  zone.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
(+212 files in other folders)
