[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "6.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.2", features = ["cors"] }
shared = { path = "../shared" }
rand = "0.8"