[package]
name = "shared"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
type_reflect = "0.3.0"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
seahash = "4.1.0"
rand = "0.8.0"
rand_chacha = "0.3.0"

[dev-dependencies]
pretty_assertions = "1"
